// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RefugeBottomSheet Component Snapshot testing hauria de coincidir amb el snapshot amb favorit actiu 1`] = `
<View
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "flex": 1,
        "opacity": 1,
      }
    }
    testID="backdrop"
  />
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "borderTopLeftRadius": 24,
          "borderTopRightRadius": 24,
          "bottom": 0,
          "elevation": 10,
          "left": 0,
          "maxHeight": "80%",
          "paddingHorizontal": 20,
          "position": "absolute",
          "right": 0,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": -4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 12,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
    testID="bottom-sheet"
  >
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "#d1d5db",
          "borderRadius": 2,
          "height": 4,
          "marginBottom": 10,
          "marginTop": 12,
          "width": 40,
        }
      }
    />
    <View
      style={
        {
          "height": 200,
          "marginBottom": 16,
          "width": "100%",
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          {
            "uri": "https://example.com/image.jpg",
          }
        }
        style={
          {
            "borderRadius": 16,
            "height": "100%",
            "width": "100%",
          }
        }
        testID="refuge-image"
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "gap": 16,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": -8,
            "paddingRight": 48,
            "position": "relative",
          }
        }
      >
        <Text
          style={
            {
              "color": "#0A0A0A",
              "flex": 1,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Arimo",
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 24,
              "paddingRight": 8,
            }
          }
        >
          Refugi Test
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "height": 36,
              "justifyContent": "center",
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": -6,
              "width": 36,
            }
          }
          testID="favorite-button"
        >
          <test-file-stub
            height={24}
            width={24}
          />
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginBottom": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingHorizontal": 8,
                    "paddingVertical": 2,
                  },
                  {
                    "backgroundColor": "#DBEAFE",
                    "borderColor": "#60A5FA",
                    "borderWidth": 1.25,
                  },
                  undefined,
                ]
              }
              testID="badge-container"
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Arimo",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    {
                      "color": "#1E40AF",
                    },
                    undefined,
                  ]
                }
              >
                refuge.type.occupiedInSummer
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingHorizontal": 8,
                    "paddingVertical": 2,
                  },
                  {
                    "backgroundColor": "#A2FFC8",
                    "borderColor": "#30D270",
                    "borderWidth": 1.25,
                  },
                  undefined,
                ]
              }
              testID="badge-container"
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Arimo",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    {
                      "color": "#007931",
                    },
                    undefined,
                  ]
                }
              >
                bé
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
                "marginBottom": 8,
              },
              {
                "gap": 16,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "space-between",
              }
            }
          >
            <test-file-stub
              color="#6b7280"
              height={16}
              width={16}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontFamily": "Arimo",
                  "fontSize": 12,
                  "fontWeight": "400",
                }
              }
            >
              2500
               m
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "space-between",
              }
            }
          >
            <test-file-stub
              color="#4A5565"
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontFamily": "Arimo",
                  "fontSize": 12,
                  "fontWeight": "400",
                }
              }
            >
              20
               
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "space-between",
              }
            }
          >
            <test-file-stub
              color="#6b7280"
              height={16}
              width={16}
            />
            <View
              style={
                {
                  "maxWidth": 400,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#6b7280",
                    "fontFamily": "Arimo",
                    "fontSize": 12,
                    "fontWeight": "400",
                  }
                }
              >
                 
                Pirineus
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f97316",
          "borderRadius": 8,
          "flex": 1,
          "gap": 8,
          "height": "100%",
          "justifyContent": "center",
          "opacity": 1,
          "paddingBottom": 8,
          "paddingHorizontal": 20,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
          "paddingVertical": 14,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#111827",
              "fontFamily": "Arimo",
              "fontSize": 16,
              "fontWeight": "600",
            },
            {
              "color": "#fff",
              "flexWrap": "wrap",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
            },
          ]
        }
      >
        Veure detalls
      </Text>
    </View>
  </View>
</View>
`;

exports[`RefugeBottomSheet Component Snapshot testing hauria de coincidir amb el snapshot quan isVisible és false 1`] = `null`;

exports[`RefugeBottomSheet Component Snapshot testing hauria de coincidir amb el snapshot quan isVisible és true 1`] = `
<View
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "flex": 1,
        "opacity": 1,
      }
    }
    testID="backdrop"
  />
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
          "borderTopLeftRadius": 24,
          "borderTopRightRadius": 24,
          "bottom": 0,
          "elevation": 10,
          "left": 0,
          "maxHeight": "80%",
          "paddingHorizontal": 20,
          "position": "absolute",
          "right": 0,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": -4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 12,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
    testID="bottom-sheet"
  >
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "#d1d5db",
          "borderRadius": 2,
          "height": 4,
          "marginBottom": 10,
          "marginTop": 12,
          "width": 40,
        }
      }
    />
    <View
      style={
        {
          "height": 200,
          "marginBottom": 16,
          "width": "100%",
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          {
            "uri": "https://example.com/image.jpg",
          }
        }
        style={
          {
            "borderRadius": 16,
            "height": "100%",
            "width": "100%",
          }
        }
        testID="refuge-image"
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "column",
          "gap": 16,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": -8,
            "paddingRight": 48,
            "position": "relative",
          }
        }
      >
        <Text
          style={
            {
              "color": "#0A0A0A",
              "flex": 1,
              "flexShrink": 1,
              "flexWrap": "wrap",
              "fontFamily": "Arimo",
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 24,
              "paddingRight": 8,
            }
          }
        >
          Refugi Test
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "height": 36,
              "justifyContent": "center",
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": -6,
              "width": 36,
            }
          }
          testID="favorite-button"
        >
          <test-file-stub
            height={24}
            width={24}
          />
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
              "marginBottom": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingHorizontal": 8,
                    "paddingVertical": 2,
                  },
                  {
                    "backgroundColor": "#DBEAFE",
                    "borderColor": "#60A5FA",
                    "borderWidth": 1.25,
                  },
                  undefined,
                ]
              }
              testID="badge-container"
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Arimo",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    {
                      "color": "#1E40AF",
                    },
                    undefined,
                  ]
                }
              >
                refuge.type.occupiedInSummer
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingHorizontal": 8,
                    "paddingVertical": 2,
                  },
                  {
                    "backgroundColor": "#A2FFC8",
                    "borderColor": "#30D270",
                    "borderWidth": 1.25,
                  },
                  undefined,
                ]
              }
              testID="badge-container"
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Arimo",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    {
                      "color": "#007931",
                    },
                    undefined,
                  ]
                }
              >
                bé
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
                "marginBottom": 8,
              },
              {
                "gap": 16,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "space-between",
              }
            }
          >
            <test-file-stub
              color="#6b7280"
              height={16}
              width={16}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontFamily": "Arimo",
                  "fontSize": 12,
                  "fontWeight": "400",
                }
              }
            >
              2500
               m
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "space-between",
              }
            }
          >
            <test-file-stub
              color="#4A5565"
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontFamily": "Arimo",
                  "fontSize": 12,
                  "fontWeight": "400",
                }
              }
            >
              20
               
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "justifyContent": "space-between",
              }
            }
          >
            <test-file-stub
              color="#6b7280"
              height={16}
              width={16}
            />
            <View
              style={
                {
                  "maxWidth": 400,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#6b7280",
                    "fontFamily": "Arimo",
                    "fontSize": 12,
                    "fontWeight": "400",
                  }
                }
              >
                 
                Pirineus
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#f97316",
          "borderRadius": 8,
          "flex": 1,
          "gap": 8,
          "height": "100%",
          "justifyContent": "center",
          "opacity": 1,
          "paddingBottom": 8,
          "paddingHorizontal": 20,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
          "paddingVertical": 14,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#111827",
              "fontFamily": "Arimo",
              "fontSize": 16,
              "fontWeight": "600",
            },
            {
              "color": "#fff",
              "flexWrap": "wrap",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
            },
          ]
        }
      >
        Veure detalls
      </Text>
    </View>
  </View>
</View>
`;
